# cubical

./: .gitignore  AbsToInternal.hs  CTT.hs  Concrete.hs  Connections.hs  Core.hs  Eval.hs  Exp.cf  LICENSE  MTT.hs  MTTtoCTT.hs  Main.hs  MainCub.hs  Makefile  Parser.hs  Pretty.hs  Program.hs  README.md  Setup.hs  SimpConcrete.hs  TODO  Tests.hs  TypeChecker.hs  cubical.cabal  cubical.el  equality.cub  minus  shell.nix  test.tt
MiniTT/: Concrete.hs  Exp.cf  MTT.hs  Main.hs  Makefile
MiniTT/examples/: primitive.cub
MiniTT/experiments/: Concrete.hs
examples/: #nIso.cub#  BoolEqBool.cub  Eq.cub  Kraus.cub  UnotSet.cub  UnotSet.cub~  axChoice.cub  binnat.cub  bug.cub  bug1.cub  circle.cub  collection.cub  cong.cub  cong.cub~  connections.cub  contr.cub  curry.cub  demo1.cub  description.cub  discZ.cub  discor.cub  dvd.cub  elimEquiv.cub  epi.cub  equivProp.cub  equivSet.cub  equivTotal.cub  equivTotal.cub~  equivprop.cub  equivset.cub  exchange.cub  exists.cub  finite.cub  finite.cub~  function.cub  function.cub~  function1.cub  gradLemma.cub  gradLemma1.cub  gradLemma_old.cub  (+86 more)
examples/binparam/: Id.cub  Lift.cub  Tr2.cub
examples/param/: Constr.cub  Id.cub  IsoFun.cub  IsoFunAlt.cub  IsoList.cub  IsoList2.cub  IsoListImpred.cub  IsoPred.cub  IsoSigma.cub  Nat.cub  Rel.cub  Rel2.cub  Rel6.cub  Transport.cub  Univs.cub
minitt/: Concr.hs  Concrete.hs  Exp.cf  InterMTT3.hs  MTT.hs  MTT3.hs  Main.hs  Makefile  test.cub  uu0
minitt/examples/: mutual.cub  nat.cub
notes/: allprim.txt
test/: AbsToInternal.hs  Eval.hs  Exp.cf  Main.hs
