name:                cubical
version:             0.1.0
synopsis:            Implementation of Univalence in Cubical Sets
description:         Cubical implements an experimental simple type checker
                     for type theory with univalence with an evaluator for closed terms.
homepage:            https://github.com/simhu/cubical
extra-source-files:  Makefile, README.md, Exp.cf, examples/*.cub
license:             MIT
license-file:        LICENSE
author:              Cyril Cohen, Thierry Coquand, Simon Huber, Anders Mörtberg
maintainer:          mortberg@chalmers.se
-- copyright:           
category:            Dependent Types
build-type:          Custom
-- extra-source-files:  
cabal-version:       >=1.10

executable cubical
  main-is:             Main.hs
  other-modules:       Exp.Lex, Exp.Par
  other-extensions:    TupleSections, CPP, MagicHash
  build-depends:       base >=4.5 && < 5, transformers >=0.3, mtl >=2.1, haskeline >=0.7, directory >=1.2, array >=0.4, BNFC >= 2.6
  -- hs-source-dirs:      
  build-tools:         alex, happy
  default-language:    Haskell2010
  hs-source-dirs:      .
  other-modules:       CTT, Concrete, Eval, MTT, MTTtoCTT, Pretty
